--- a/css/layouts/main.css
+++ b/css/layouts/main.css
@@ -150,7 +150,12 @@ img.right {
 }
 
 .card-img-top {
+  width: 100%;
+  height: 100%;
   transition: all 0.3s ease-out !important;
+  /* 썸네일 위치정렬 */
+  object-fit: cover;
+  /* object-fit: contain; */
 }
 
 .card:hover .card-head .card-img-top,
