google Ads test4

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 {{ define "header" }}
 <meta name="description" content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Title }}{{ end }}" />
 <link
