--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,8 +14,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
 
 <!--=================== google Ads ==============================-->
-<script data-ad-client="ca-pub-1882367656929494" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1882367656929494"
+     crossorigin="anonymous"></script>
 <!--================= fab-icon =========================-->
 {{/* add favicon only if the site author has provided the the favicon */}}
 {{ if site.Params.logo.favicon }}
