사이드바 css 변경
내용이 길어져도 줄바꿈 되지 않게 수정

--- a/static/css/navigators/sidebar.css
+++ b/static/css/navigators/sidebar.css
@@ -71,6 +71,11 @@
   line-height: 2em;
   color: #3c4858;
   position: relative;
+
+  /* 추가 */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .tree li a {
