--- a/layouts/partials/googlead_inpost.html
+++ b/layouts/partials/googlead_inpost.html
@@ -2,7 +2,7 @@
      crossorigin="anonymous"></script>
 <!-- log_post -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block;min-width:400px;max-width:970px;width:100%;"
      data-ad-client="ca-pub-1882367656929494"
      data-ad-slot="9457951065"
      data-ad-format="auto"
