--- a/layouts/partials/googlead.html
+++ b/layouts/partials/googlead.html
@@ -1,6 +1,6 @@
 <!-- log_post -->
 <ins class="adsbygoogle"
-     style="display:inline-block;min-width:400px;width:100%;"
+     style="display:inline-block;min-width:400px;width:100%;text-align: center"
      data-ad-client="ca-pub-1882367656929494"
      data-ad-slot="9457951065"
      data-ad-format="auto"
