--- a/static/css/layouts/main.css
+++ b/static/css/layouts/main.css
@@ -13,6 +13,10 @@ Green:   #2DCA73
 Yellow:  #FFC212
 */
 
+html {
+  /* font-size: 18px; */
+}
+
 body {
   background-color: #f9fafc;
   font-family: "Muli";
