--- a/css/sections/home.css
+++ b/css/sections/home.css
@@ -40,7 +40,7 @@
 .home img {
   width: 148px;
   height: 148px;
-  background-color: #e7e7ef;
+  background-color: #17171e;
   padding: 5px;
   margin-bottom: 10px;
 }
