--- a/css/layouts/single.css
+++ b/css/layouts/single.css
@@ -1,7 +1,3 @@
-html {
-  font-size: 18px;
-}
-
 body {
   background-color: #e5e9f2;
   position: relative;
@@ -65,6 +61,8 @@ body {
   flex-direction: column;
   align-items: flex-start;
   transition: all ease-out 0.3s;
+  /* max-height: 60vh;
+  overflow-y: scroll; */
 }
 
 .toc ul {
@@ -156,36 +154,54 @@ body {
 }
 
 /* 코드블럭 */
-.post-content .highlight {
+.content-section .highlight {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
 
-.post-content h1,
-h2 {
+.content-section h1
+{
   margin-top: 5rem;
   margin-bottom: 2rem;
 }
 
-.post-content h3,
-h4,
-h5,
-h6 {
+.content-section h2 {
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+}
+
+.content h3 {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+.content h4 {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+.content h5 {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+.content h6 {
   margin-top: 3rem;
   margin-bottom: 2rem;
 }
 
-.post-content code {
+.content-section {
+  /* font-size: 16px; */
+}
+
+.content-section code {
   font-size: inherit;
   word-break:break-all;
   white-space: break-spaces;
 }
 
-.post-content pre > code {
+/* .content-section pre > code {
   font-size: 0.8rem;
-}
+} */
 
-.post-content blockquote {
+.content-section blockquote {
   border-left: 4px solid #248aaa;
   background-color: #248baa15;
   padding: 0.3rem;
@@ -194,7 +210,7 @@ h6 {
   margin-bottom: 3rem;
 }
 
-.post-content blockquote > p {
+.content-section blockquote > p {
   color: #3c4858;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
