--- a/static/css/layouts/single.css
+++ b/static/css/layouts/single.css
@@ -498,6 +498,9 @@ body {
     padding: 5px;
   }
 }
+.toc-holder h5{
+  margin: 1rem 0 0.5rem 0;
+}
 
 /* iPhoneX, iPhone 6,7,8 */
 @media only screen and (max-width: 375px) {
