--- a/layouts/partials/navigators/sidebar.html
+++ b/layouts/partials/navigators/sidebar.html
@@ -6,17 +6,8 @@
     {{ $icon = "fa-minus-circle"}}
     {{ $class = "active" }}
   {{end}}
-  {{ if .HasChildren }}
-    <!-- Add current entry -->
-    <li>
-      <i class="fas {{ $icon }}"></i><a class="{{$class}}" href="{{ .URL }}">{{.Name}}</a>
-      <!-- Add sub-tree -->
-      <ul class="{{ $class }}">
-        {{ partial "navigators/sidebar.html" (dict "menuName" $.menuName "menuItems" .Children "ctx" $.ctx) }}
-      </ul>
-    </li>
-  {{ else }}
-    <!-- No sub-tree. So, only add current entry -->
-    <li><a class="{{$class}}" href="{{ .URL }}" title="{{ .Name }}">{{.Name}}</a></li>
-  {{ end }}
+
+  <!-- No sub-tree. -->
+  <li><a class="{{$class}}" href="{{ .URL }}" title="{{ .Name }}">{{.Name}}</a></li>
+
 {{ end }}
