--- a/layouts/partials/footer_old.html
+++ b/layouts/partials/footer_old.html
@@ -37,7 +37,7 @@
 
   {{ $disclaimer := "" }}
   {{ $siteConfig := (index site.Data site.Language.Lang).site }}
-  {{ if $siteConfig.disclaimer }}
+  {{ if $siteConfig.disclaimer }} 
     {{ $disclaimer = $siteConfig.disclaimer }}
   {{ end }}
 
@@ -73,7 +73,7 @@
                   {{ $sectionID = .section.id }}
                 {{ end }}
                 <li class="nav-item">
-                  <a class="smooth-scroll" href="{{ "" | absLangURL }}#{{ $sectionID }}">{{ .section.name }}</a>
+                  <a class="smooth-scroll" href="/#{{ $sectionID }}">{{ .section.name }}</a>
                 </li>
               {{ end }}
             {{- end }}
@@ -86,22 +86,11 @@
           <h5>{{ i18n "contact_me" }}</h5>
           <ul>
             {{ range $key,$value:= $author.contactInfo }}
-              {{ if (eq $key "email") }}
-                <li><a href={{ printf "mailto:%s" $value }} target="_blank" rel="noopener">
-                  <span><i class="fas fa-envelope"></i></span> <span>{{ $value }}</span>
-                </a></li>
-              {{ else if (eq $key "phone") }}
-                <li><span><i class="fas fa-phone-alt"></i></span> <span>{{ $value }}</span></li>
-              {{ else if (eq $key "linkedin") }}
-                <li><a href={{ printf "https://www.linkedin.com/in/%s" $value }} target="_blank" rel="noopener">
-                  <span><i class="fab fa-linkedin"></i></span> <span>{{ $author.name }}</span>
-                </a></li>
-              {{ else if (eq $key "github") }}
-                <li><a href={{ printf "https://github.com/%s" $value }} target="_blank" rel="noopener">
-                  <span><i class="fab fa-github"></i></span> <span>{{ $value }}</span>
-                </a></li>
+              {{/* 이메일은 링크 별도 수정 */}}
+              {{ if (in $key "mail") }}
+                <li><span>{{ title $key }}: </span> <a href="mailto:{{ $value }}"><span>{{ $value }}</span></a></li>
               {{ else }}
-                <li><span>{{ title $key }}: </span> <span>{{ $value }}</span></li>
+                <li><span>{{ title $key }}: </span> <a href="{{ $value }}"><span>{{ $value }}</span></a></li>
               {{ end }}
             {{ end }}
           </ul>
