--- a/static/css/layouts/single.css
+++ b/static/css/layouts/single.css
@@ -141,50 +141,33 @@ body {
 } */
 
 .post-content img {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .post-content p {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .post-content ul {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 /* 코드블럭 */
 .content-section .highlight {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .content-section h1
 {
-  margin-top: 5rem;
+  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
-.content-section h2 {
-  margin-top: 5rem;
-  margin-bottom: 2rem;
-}
-
-.content h3 {
-  margin-top: 3rem;
-  margin-bottom: 2rem;
-}
-.content h4 {
-  margin-top: 3rem;
-  margin-bottom: 2rem;
-}
-.content h5 {
-  margin-top: 3rem;
-  margin-bottom: 2rem;
-}
-.content h6 {
-  margin-top: 3rem;
-  margin-bottom: 2rem;
+.page-content h2, h3, h4, h5, h6 {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .content-section {
